[project]
name = "claude-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s[full]>=0.3.0",
    "docling>=2.74.0",
    "flashrank>=0.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "openai>=2.21.0",
    "pymilvus[milvus-lite]>=2.6.9",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "setuptools<81",
    "streamlit>=1.54.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
]
