[project]
name = "claude-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=13.3.0",
    "beautifulsoup4>=4.14.3",
    "bm25s[full]>=0.3.0",
    "datasets>=4.5.0",
    "docling>=2.74.0",
    "fastembed>=0.7.4",
    "flashrank>=0.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "openai>=2.21.0",
    "openinference-instrumentation-langchain>=0.1.59",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pymilvus[milvus-lite]>=2.6.9",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.17.0",
    "ragas>=0.4.3",
    "sentence-transformers>=5.2.3",
    "setuptools<81",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.54.0",
    "supabase>=2.28.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "agents*", "ingestion*", "retrieval*", "evaluation*", "guardrails*", "config*"]
